--- a/src/bot.model/bot.model.csproj
+++ b/src/bot.model/bot.model.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config.cs" />
+    <Compile Include="IApiCredentials.cs" />
     <Compile Include="ITradePrice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
