Added more logs, kraken order info retrieval

--- a/src/bot.kraken/bot.kraken.csproj
+++ b/src/bot.kraken/bot.kraken.csproj
@@ -53,7 +53,7 @@
     <Compile Include="KrakenClient.cs" />
     <Compile Include="Model\Asset.cs" />
     <Compile Include="Model\AssetPair.cs" />
-    <Compile Include="Model\ClosedOrder.cs" />
+    <Compile Include="Model\ORderInfo.cs" />
     <Compile Include="Model\OrderStatus.cs" />
     <Compile Include="Model\KrakenResponse.cs" />
     <Compile Include="Model\OrderPriceType.cs" />
