Calculated fees, added balance service

--- a/src/bot.core.tests/bot.core.tests.csproj
+++ b/src/bot.core.tests/bot.core.tests.csproj
@@ -101,9 +101,11 @@
   <ItemGroup>
     <Compile Include="Integration.cs" />
     <Compile Include="WhenAnalysingMacd.cs" />
+    <Compile Include="WhenCalcCurrencyAmount.cs" />
     <Compile Include="WhenCalcMovingAverages.cs" />
     <Compile Include="WhenGrouping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WhenManagingBalance.cs" />
     <Compile Include="WhenSearchForPeaks.cs" />
   </ItemGroup>
   <ItemGroup>
