--- a/src/bot.core.tests/packages.config
+++ b/src/bot.core.tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Combinatorics" version="1.1.0.19" targetFramework="net461" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.NETCore.Portable.Compatibility" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net461" />
@@ -50,4 +51,5 @@
   <package id="System.Threading.Timer" version="4.0.1" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net461" />
+  <package id="Unity" version="4.0.1" targetFramework="net461" />
 </packages>
