--- a/src/bot.model/bot.model.csproj
+++ b/src/bot.model/bot.model.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Config.cs" />
     <Compile Include="IApiCredentials.cs" />
+    <Compile Include="IService.cs" />
     <Compile Include="ITradePrice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
