--- a/src/bot.core/bot.core.csproj
+++ b/src/bot.core/bot.core.csproj
@@ -54,7 +54,8 @@
   <ItemGroup>
     <Compile Include="BalanceService.cs" />
     <Compile Include="ConnectivityService.cs" />
-    <Compile Include="CoreService.cs" />
+    <Compile Include="DateTimeService.cs" />
+    <Compile Include="TradeService.cs" />
     <Compile Include="DatabaseService.cs" />
     <Compile Include="Extensions\AnalysisExtensions.cs" />
     <Compile Include="Extensions\CalculationExtensions.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Extensions\GroupingExtensions.cs" />
     <Compile Include="Extensions\Operation.cs" />
     <Compile Include="FileService.cs" />
+    <Compile Include="LoaderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TradeStatus.cs" />
   </ItemGroup>
