--- a/src/bot.model/bot.model.csproj
+++ b/src/bot.model/bot.model.csproj
@@ -41,10 +41,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config.cs" />
+    <Compile Include="EventConstant.cs" />
     <Compile Include="IApiCredentials.cs" />
+    <Compile Include="IDateTime.cs" />
+    <Compile Include="IExchangeClient.cs" />
     <Compile Include="IService.cs" />
-    <Compile Include="ITradePrice.cs" />
+    <Compile Include="ITrade.cs" />
+    <Compile Include="PriceType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SinceResponse.cs" />
+    <Compile Include="TransactionType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
