--- a/src/bot.core/bot.core.csproj
+++ b/src/bot.core/bot.core.csproj
@@ -53,11 +53,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BalanceRepository.cs" />
     <Compile Include="BalanceService.cs" />
     <Compile Include="BaseRepository.cs" />
     <Compile Include="ConnectivityService.cs" />
     <Compile Include="DateTimeService.cs" />
     <Compile Include="EventRepository.cs" />
+    <Compile Include="OrderRepository.cs" />
     <Compile Include="TradeService.cs" />
     <Compile Include="DatabaseService.cs" />
     <Compile Include="Extensions\AnalysisExtensions.cs" />
