--- a/src/bot.core/bot.core.csproj
+++ b/src/bot.core/bot.core.csproj
@@ -61,6 +61,7 @@
     <Compile Include="DateTimeService.cs" />
     <Compile Include="EventRepository.cs" />
     <Compile Include="LogRepository.cs" />
+    <Compile Include="MoneyService.cs" />
     <Compile Include="OrderRepository.cs" />
     <Compile Include="OrderService.cs" />
     <Compile Include="TradeService.cs" />
