--- a/src/bot.model/bot.model.csproj
+++ b/src/bot.model/bot.model.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ITrade.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderStatus.cs" />
+    <Compile Include="OrderType.cs" />
     <Compile Include="PriceType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SinceResponse.cs" />
