Finished simulator. Added MACD slow analysis.

--- a/src/bot.core/bot.core.csproj
+++ b/src/bot.core/bot.core.csproj
@@ -62,6 +62,7 @@
     <Compile Include="EventRepository.cs" />
     <Compile Include="LogRepository.cs" />
     <Compile Include="MoneyService.cs" />
+    <Compile Include="NotSoldRepository.cs" />
     <Compile Include="OrderRepository.cs" />
     <Compile Include="OrderService.cs" />
     <Compile Include="TradeService.cs" />
