Make trader service work

--- a/src/bot.service.loader/App.config
+++ b/src/bot.service.loader/App.config
@@ -11,4 +11,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="db" value="Server=(local);Database=bot;User Id=serviceAccount;Password=Exol37an1;" />
+  </appSettings>
 </configuration>
