Added mail service. Added time delay for not sold. Fix not sold bug

--- a/src/bot.core/bot.core.csproj
+++ b/src/bot.core/bot.core.csproj
@@ -61,6 +61,7 @@
     <Compile Include="DateTimeService.cs" />
     <Compile Include="EventRepository.cs" />
     <Compile Include="LogRepository.cs" />
+    <Compile Include="MailService.cs" />
     <Compile Include="MoneyService.cs" />
     <Compile Include="NotSoldRepository.cs" />
     <Compile Include="OrderRepository.cs" />
