--- a/src/bot.core/bot.core.csproj
+++ b/src/bot.core/bot.core.csproj
@@ -67,6 +67,7 @@
     <Compile Include="OperationRepository.cs" />
     <Compile Include="OrderRepository.cs" />
     <Compile Include="OrderService.cs" />
+    <Compile Include="StatusService.cs" />
     <Compile Include="TradeService.cs" />
     <Compile Include="TradeRepository.cs" />
     <Compile Include="Extensions\AnalysisExtensions.cs" />
