--- a/src/bot.model/bot.model.csproj
+++ b/src/bot.model/bot.model.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Config.cs" />
     <Compile Include="EventConstant.cs" />
     <Compile Include="Extentions.cs" />
+    <Compile Include="FieldAttribute.cs" />
     <Compile Include="IApiCredentials.cs" />
     <Compile Include="IDateTime.cs" />
     <Compile Include="IExchangeClient.cs" />
