--- a/src/bot.core.tests/packages.config
+++ b/src/bot.core.tests/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Accord" version="3.8.0" targetFramework="net461" />
+  <package id="Accord.Math" version="3.8.0" targetFramework="net461" />
+  <package id="Accord.Neuro" version="3.3.0" targetFramework="net461" />
+  <package id="Accord.Statistics" version="3.8.0" targetFramework="net461" />
   <package id="Castle.Core" version="4.2.0" targetFramework="net461" />
   <package id="Combinatorics" version="1.1.0.19" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
