--- a/src/bot.core.tests/bot.core.tests.csproj
+++ b/src/bot.core.tests/bot.core.tests.csproj
@@ -143,6 +143,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigTests.cs" />
     <Compile Include="FieldAttributeTests.cs" />
     <Compile Include="Integration.cs" />
     <Compile Include="IntegrationTests.cs" />
@@ -153,7 +154,6 @@
     <Compile Include="WhenAnalysingMacd.cs" />
     <Compile Include="WhenCalcCurrencyAmount.cs" />
     <Compile Include="WhenCalcMovingAverages.cs" />
-    <Compile Include="WhenFetchingConfig.cs" />
     <Compile Include="WhenGrouping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WhenManagingBalance.cs" />
