--- a/src/bot.core.tests/bot.core.tests.csproj
+++ b/src/bot.core.tests/bot.core.tests.csproj
@@ -143,6 +143,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigRepositoryTests.cs" />
     <Compile Include="ConfigTests.cs" />
     <Compile Include="FieldAttributeTests.cs" />
     <Compile Include="Integration.cs" />
